[gd_scene load_steps=4 format=3 uid="uid://1xlwaxmymknb"]

[ext_resource type="Script" path="res://Entities/CraftSelection/CraftSelection.gd" id="1_d6glt"]
[ext_resource type="Texture2D" uid="uid://0m8bgo8ph7gj" path="res://icon.svg" id="2_y4uci"]
[ext_resource type="Script" path="res://Entities/CraftSelection/IngerdientsImages.gd" id="5_u7lyg"]

[node name="CraftSelection" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d6glt")

[node name="RecipesWrapper" type="Control" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 32.0
offset_top = 32.0
offset_right = 416.0
offset_bottom = -36.0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="RecipesWrapper"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Crafting" type="Label" parent="RecipesWrapper/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Ingredients"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="RecipesWrapper/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true

[node name="RecipeBox" type="VBoxContainer" parent="RecipesWrapper/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="IngredientsWrapper" type="Control" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 441.0
offset_top = 32.0
offset_right = 832.0
offset_bottom = -36.0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="IngredientsWrapper"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Crafting" type="Label" parent="IngredientsWrapper/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Inventory"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="IngredientsWrapper/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true

[node name="IngredientBox" type="VBoxContainer" parent="IngredientsWrapper/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="CraftControl" type="Control" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1027.0
offset_bottom = -315.0
grow_horizontal = 0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CraftControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="CraftControl/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Possible Craft Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="IngerdientsImages" type="HBoxContainer" parent="CraftControl/VBoxContainer"]
layout_mode = 2
alignment = 1
script = ExtResource("5_u7lyg")

[node name="ColorRect" type="ColorRect" parent="CraftControl/VBoxContainer/IngerdientsImages"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="IngredientOne" type="TextureRect" parent="CraftControl/VBoxContainer/IngerdientsImages/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect2" type="ColorRect" parent="CraftControl/VBoxContainer/IngerdientsImages"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="IngredientTwo" type="TextureRect" parent="CraftControl/VBoxContainer/IngerdientsImages/ColorRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect3" type="ColorRect" parent="CraftControl/VBoxContainer/IngerdientsImages"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="IngredientThree" type="TextureRect" parent="CraftControl/VBoxContainer/IngerdientsImages/ColorRect3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="CraftControl/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 40)
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="CraftControl/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Craft" type="Button" parent="CraftControl/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 46
text = "Craft"

[node name="Reset" type="Button" parent="CraftControl/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 46
text = "Reset"

[node name="Control2" type="Control" parent="CraftControl/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 20)
layout_mode = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="CraftControl/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Back" type="Button" parent="CraftControl/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 46
text = "Back"

[node name="PlayerHints" type="Control" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -942.0
offset_top = -305.0
grow_horizontal = 0
grow_vertical = 0

[node name="TextureRect" type="TextureRect" parent="PlayerHints"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -309.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("2_y4uci")
stretch_mode = 4

[node name="ColorRect" type="ColorRect" parent="PlayerHints"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -231.0
offset_right = -274.0
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.219608, 0.219608, 0.219608, 1)

[node name="Label" type="Label" parent="PlayerHints/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "This is a message to help the player with the crafting"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
